<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.tree-sitter</groupId>
  <artifactId>jtreesitter-java</artifactId>
  <name>JTreeSitter Java</name>
  <version>0.23.2</version>
  <description>Java grammar for JTreeSitter</description>
  <url>https://github.com/tree-sitter/tree-sitter-java</url>
  <organization>
    <name>tree-sitter</name>
    <url>https://github.com/tree-sitter</url>
  </organization>
  <licenses>
    <license>
      <name>MIT</name>
      <url>https://spdx.org/licenses/MIT.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Ayman Nadeem</name>
      <email>aymannadeem@github.com</email>
      <url>https://github.com/aymannadeem</url>
    </developer>
    <developer>
      <name>Max Brunsfeld</name>
      <email>maxbrunsfeld@gmail.com</email>
      <url>https://github.com/maxbrunsfeld</url>
    </developer>
    <developer>
      <name>Amaan Qureshi</name>
      <email>amaanq12@gmail.com</email>
      <url>https://github.com/amaanq</url>
    </developer>
  </developers>
  <scm>
    <url>https://github.com/tree-sitter/tree-sitter-java</url>
    <connection>scm:git:git://github.com/tree-sitter/tree-sitter-java.git</connection>
    <developerConnection>scm:git:ssh://github.com/tree-sitter/tree-sitter-java.git</developerConnection>
  </scm>
  <ciManagement>
    <system>Github Actions</system>
    <url>https://github.com/tree-sitter/tree-sitter-java/actions</url>
  </ciManagement>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/tree-sitter/tree-sitter-java/issues</url>
  </issueManagement>
  <properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.deploy.skip>true</maven.deploy.skip>
    <gpg.skip>true</gpg.skip>
    <publish.auto>false</publish.auto>
    <publish.skip>true</publish.skip>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.github.tree-sitter</groupId>
      <artifactId>jtreesitter</artifactId>
      <version>0.23.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.11.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <reportsDirectory>
            ${project.build.directory}/reports/surefire
          </reportsDirectory>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.8.0</version>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <show>public</show>
          <nohelp>true</nohelp>
          <noqualifier>true</noqualifier>
          <doclint>all,-missing</doclint>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.5</version>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <bestPractices>true</bestPractices>
              <gpgArguments>
                <arg>--no-tty</arg>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.5.0</version>
        <executions>
          <execution>
            <phase>deploy</phase>
            <goals>
              <goal>publish</goal>
            </goals>
            <configuration>
              <waitUntil>validated</waitUntil>
              <autoPublish>${publish.auto}</autoPublish>
              <skipPublishing>${publish.skip}</skipPublishing>
              <outputFilename>${project.artifactId}-${project.version}.zip</outputFilename>
              <deploymentName>${project.artifactId}-${project.version}.zip</deploymentName>
            </configuration>
          </execution>
        </executions>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>ci</id>
      <activation>
        <property>
          <name>env.CI</name>
          <value>true</value>
        </property>
      </activation>
      <properties>
        <gpg.skip>false</gpg.skip>
        <publish.auto>true</publish.auto>
        <publish.skip>false</publish.skip>
      </properties>
    </profile>
  </profiles>
</project>
